# loreapp-tauri

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc  .stylelintrc  README.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: documents-editor-scheme.excalidraw  templates-editor-scheme.excalidraw
local_modules/tailwind-merge/: package.json  pnpm-lock.yaml
src/: App.tsx  event.ts  ipc.ts  main.tsx  router.tsx  store.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/crates/graph/: .gitignore  README.md
src-tauri/crates/graph/crates/builder/: Cargo.toml
src-tauri/crates/graph/crates/builder/src/input/: mod.rs  to_graph.rs
src-tauri/crates/magic_utils/: Cargo.toml
src-tauri/crates/magic_utils/magic_utils/: Cargo.toml
src-tauri/crates/magic_utils/magic_utils/src/: additional_attributes.rs  lib.rs
src-tauri/crates/magic_utils/magic_utils_macros/: Cargo.toml
src-tauri/crates/magic_utils/magic_utils_macros/src/: lib.rs
src-tauri/crates/magic_utils/magic_utils_macros/src/helpers/: case_style.rs  inner_variant_props.rs  metadata.rs  mod.rs  type_props.rs  variant_props.rs
src-tauri/crates/magic_utils/magic_utils_macros/src/macros/: mod.rs
src-tauri/crates/magic_utils/magic_utils_macros/src/macros/strings/: display.rs  from_string.rs  mod.rs
src-tauri/crates/surreal-qb/: Cargo.toml
src-tauri/crates/surreal-qb/modql-macros/: Cargo.toml
src-tauri/crates/surreal-qb/modql-macros/src/: lib.rs  utils.rs
src-tauri/crates/surreal-qb/modql-macros/src/derive_filter_nodes/: mod.rs
src-tauri/crates/surreal-qb/src/: expr.rs  func.rs  lib.rs  prepare.rs
src-tauri/crates/surreal-qb/src/backend/: mod.rs  query_builder.rs
src-tauri/crates/surreal-qb/src/backend/surreal_db/: query.rs
src-tauri/crates/surreal-qb/src/filter/: mod.rs
src-tauri/crates/surreal-qb/src/filter/json/: ovs_de_array.rs  ovs_de_number.rs
src-tauri/crates/surreal-qb/src/filter/list_options/: mod.rs
src-tauri/crates/surreal-qb/src/filter/ops/: op_val_array.rs  op_val_bool.rs  op_val_nums.rs  op_val_value.rs
src-tauri/crates/surreal-qb/src/query/: delete.rs  mod.rs  returning.rs  select.rs  traits.rs  update.rs
src-tauri/src/: context.rs  ctx.rs  error.rs  event.rs  logger.rs  macros.rs  main.rs  prelude.rs  settings.rs  tray.rs
src-tauri/src/algo/: algo.rs  matrix.rs  mod.rs
src-tauri/src/algo/graph/: mod.rs  topological_sort.rs
src-tauri/src/fs/: cache.rs  explorer.rs  fs.rs  mod.rs  scope.rs  search.rs  utils.rs
src-tauri/src/fs/fs_watch/: async_watcher.rs  files_watch.rs  mod.rs
src-tauri/src/ipc/: document.rs  documents_folder.rs  documents_template.rs  mod.rs  params.rs  picture.rs  response.rs  settings.rs  tags_and_categories.rs
src-tauri/src/macros/surreal_macros/: Cargo.toml
src-tauri/src/macros/surreal_macros/src/: file.rs  lib.rs
src-tauri/src/macros/surreal_macros/src/parser/: common.rs  escape.rs  fmt.rs  ident.rs  kind.rs  mod.rs  table.rs
src-tauri/src/model/: bmc_base.rs  bmc_graph.rs  collect_db_items.rs  ctx.rs  document.rs  documents_folder.rs  documents_template.rs  error.rs  mod.rs  model_store.rs  picture.rs  seed_for_dev.rs  tags_and_categories.rs
src-tauri/src/model/store/: error.rs  mod.rs  surreal_modql.rs  surreal_store.rs  surrealql.rs  try_froms.rs  x_take.rs  x_take_impl.rs
src-tauri/src/tauri_plugins/: mod.rs
src-tauri/src/tauri_plugins/window-state-manager-plugin/: Cargo.toml
src-tauri/src/tauri_plugins/window-state-manager-plugin/src/: commands.rs  error.rs  lib.rs  types.rs
src-tauri/src/utils/: mod.rs  serde.rs  x_take.rs
src-tauri/surreal-qb/: Cargo.toml
src-tauri/surreal-qb/modql-macros/src/derive_filter_nodes/: utils.rs
src-tauri/surreal-qb/src/: analyzer.rs  error.rs  lib.rs  prepare.rs  types.rs
src-tauri/surreal-qb/src/backend/: query_builder.rs  table_ref_builder.rs
src-tauri/surreal-qb/src/backend/surreal_db/: mod.rs
src-tauri/surreal-qb/src/filter/json/: mod.rs  ovs_de_array.rs
src-tauri/surreal-qb/src/filter/list_options/: order_by.rs
src-tauri/surreal-qb/src/filter/nodes/: group.rs  node.rs
src-tauri/surreal-qb/src/filter/ops/: mod.rs  op_val_array.rs  op_val_bool.rs  op_val_nums.rs  op_val_string.rs  op_val_value.rs
src-tauri/surreal-qb/src/query/: condition.rs  insert.rs  on_duplicate.rs  ordered.rs  select.rs  traits.rs
src/assets/: App.css  global.css  styles.css
src/components/: Menubar.tsx  Search.tsx  WindowTitlebar.tsx  menubar.css  windowTitlebar.scss
src/constants/: window-titlebar.tsx
src/context/: ModalProvider.tsx  Providers.tsx  TabsProvider.tsx  TauriProvider.tsx  createContext.tsx  index.ts  mobx-context.ts  theme-provider.tsx
src/db/: index.ts
src/dev/: README.md  palette.tsx  previews.tsx
src/event/: event.ts  hub.ts  index.ts
src/fs/: fileWatcher.ts  fs.ts
src/hook/: index.ts  useContentNavigation.ts  useCookie.ts  useDebounce.ts  useEventCallback.ts  useFileWatcher.ts  useForkRef.ts  useHover.ts  useInput.ts  useOutside.ts  useSelectors.ts  useSelectors.tsx  useToggle.ts  window.ts
src/interface/: AppSettings.ts  CategoriesTree.ts  Category.ts  CategoryForCreate.ts  CategoryForUpdate.ts  CategoryNode.ts  CategoryWithParent.ts  Document.ts  DocumentForCreate.ts  DocumentForUpdate.ts  DocumentsFolder.ts  DocumentsFolderChild.ts  DocumentsFolderForCreate.ts  DocumentsFolderForUpdate.ts  DocumentsFolderNode.ts  DocumentsFolderTree.ts  EditorMode.ts  EditorSettings.ts  Folder.ts  FolderForCreate.ts  FolderForUpdate.ts  IpcError.ts  IpcResponse.ts  IpcSimpleResult.ts  LabelValue.ts  Note.ts  NoteForCreate.ts  NoteForUpdate.ts  PathsToGet.ts  Picture.ts  PictureForCreate.ts  PictureForUpdate.ts  SingleInstancePayload.ts  SortBy.ts  SystemTrayPayload.ts  Tag.ts  TagForCreate.ts  TagForUpdate.ts  TypeAssert.ts  Types.ts  (+3 more)
src/pages/: Documents.tsx  Gallery.tsx
src/routes/: __root.tsx  index.tsx  tabs.$tabId.documents.$docId.lazy.tsx  tabs.$tabId.documents.index.lazy.tsx  tabs.$tabId.documents.lazy.tsx  (+9 more)
(+409 files in other folders)
