[package]
name = "loreapp-tauri"
version = "0.1.0"
description = "loreapp"
authors = ["Vlayd Detect"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# TAURI
tauri = { version = "1.5", features = [ "protocol-all", "fs-all", "shell-all", "os-all", "window-all", "dialog-all", "path-all", "notification-all", "system-tray", "icon-ico", "icon-png"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
#

# DB
#surrealdb = {version = "1.1.0", default-features=false, features = ['kv-rocksdb'] }
surrealdb = {git = "https://github.com/surrealdb/surrealdb.git", branch = "main", default-features = false, features = ['kv-rocksdb'] }
surreal-qb = { path = "surreal-qb" }
surreal_macros = { path = "./src/macros/surreal_macros" }
#

# SERDE
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-diff = "0.4.1"
serde_with_macros = "3.4.0"
serde_with = "3.4.0"
#

# ALGO
rayon = "1.8.0"
quick-hash-cache = { git = "https://github.com/VlaydDetect/quick-hash-cache" }
itertools = "0.12.0"

walkdir = "2.4.0"
#notify = "6.0.1"
#notify-debouncer-full = "0.3.1"
#

# LOGS
log = "0.4.20"
simple-log = "1.6.0"
#

# ASYNC
once_cell = "1.19.0"
parking_lot = "0.12.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3.29"
async-trait = "0.1.75"
#

# UTILS
window-shadows = "0.2.2"
platform-dirs = "0.3.0"
rand = "0.8.5"
zstd = "0.13.0"
base64 = "0.21.5"
uuid = { version = "1.5.0", features = ["v4", "v7", "macro-diagnostics", "serde"] }
lazy-regex = "3.1.0"
sysinfo = "0.30.0"
num = "0.4.1"
path-clean = "1.0.1"
ts-rs = "7.0.0"
thiserror = "1.0.51"
lazy_static = "1.4.0"
fuzzy-matcher = "*"
strum_macros = "0.25.3"
#

[dev-dependencies]
anyhow = "1"
chrono = "0.4.31"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
# strip = true  # Automatically strip symbols from the binary.
