[package]
name = "surreal-qb"
version = "0.1.0"
authors = ["Vlayd Detect"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "modql and sea-query mix for SurrealDB"
categories = ["data-structures"]
keywords = ["query-language", "surrealdb", "model", "data-model"]
# homepage = "https://github.com/jeremychone/rust-modql"
# repository = "https://github.com/jeremychone/rust-modql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "modql-macros"]

[features]
default = ["modql-macros"]

[dependencies]
modql-macros = { version = "0.3", path = "modql-macros", optional = true }
#surrealdb = {git = "https://github.com/surrealdb/surrealdb.git", branch = "main", default-features = false, features = ['kv-rocksdb', 'scripting', 'ml'] }
surrealdb = {git = "https://github.com/surrealdb/surrealdb.git", branch = "main", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
uuid = "1.7"
inherent = "1"
derivative = { version = "2.2", default-features = false }
rust_decimal = { version = "1", default-features = false, optional = true }
bigdecimal = { version = "0.3", default-features = false, optional = true }
ordered-float = { version = "3.4", default-features = false, optional = true }
num = "0.4"
unreachable = "1"
matches = { version = "0.1", features = [] }
bytes = "1"

[dev-dependencies]
anyhow = "1"
serde_with = "3"
pretty_assertions = "1.4.0"
