[package]
name = "magic_utils_macros"
version = "0.1.0"
edition = "2021"
authors = ["Vlayd Detect"]

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0", features = ["parsing", "extra-traits"] }

[dev-dependencies]
magic_utils = { path = "../magic_utils", version = "0.1.0" }