[package]
name = "surreal_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
nom = "7.1.3"
proc-macro2 = "1.0.69"
proc-macro-error = "1.0.4"
quote = "1.0.33"
syn = "2.0.38"

[dev-dependencies]
chrono = "0.4.31"
surrealdb = {git = "https://github.com/surrealdb/surrealdb.git", branch = "main", default-features = false, features = ['kv-rocksdb'] }
tokio = { version = "1.33.0", features = ["macros", "rt"] }
uuid = "1.5.0"
