[package]
name = "window-state-manager-plugin"
description = "tauri plugin for manage window and window tabs state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1.5", features = ["window-set-fullscreen", "window-hide", "window-maximize", "window-minimize", "window-set-always-on-top", "window-set-focus","window-set-size", "window-show", "window-unminimize", "window-close", "window-unmaximize", "window-set-resizable", "fs-all", "path-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
bincode = "1.3.3"
bitflags = "2"
